--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,19 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: Hossein Karami | حسین کرمی
-email: hi@hosseinkarami.com
-description: توسعه‌دهنده رابط کاربری
-baseurl: "https://hosseinkarami.com/"
-url: "https://hosseinkarami.com"
-twitter: _Karamii
-github:  HosseinKarami
-behance: HosseinKarami
+title: My Portfolio
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Jannik Richter, jannik811@gmail.com
+baseurl: "/jekyll-slender-template" # the subpath of your site, e.g. /blog
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
+
 # Build settings
 markdown: kramdown
-permalink: pretty
-gems: [jekyll-paginate]
-paginate: 5
-paginate_path: "/blog/page:num/"
-exclude: ["node_modules", "gulpfile.js", "package.json"]
